--- a/src/styles.css
+++ b/src/styles.css
@@ -48,4 +48,14 @@
   padding: 25px;
   position: fixed;
   right: 25px;
+
 }
+.fab-danger{
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 25px;
+  position: fixed;
+  left: 25px;
+  width: 70px;
+  height: 70px;
+  }
