--- a/src/styles.css
+++ b/src/styles.css
@@ -41,15 +41,13 @@
 }
 
 /* FAb */
-.fab {
-  border-radius: 100%;
+/* .fab {
   bottom: 25px;
   font-size: 30px;
   padding: 25px;
-  position: fixed;
   right: 25px;
 
-}
+} */
 .fab-danger{
   border-radius: 100%;
   bottom: 25px;
